# tasko

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh
migrations/: 0001_init.sql
src/: app.rs  event.rs  filter.rs  forms.rs  input.rs  main.rs  seed.rs  state.rs
src/api/: boards.rs  columns.rs  dto.rs  labels.rs  mod.rs  tasks.rs  tests.rs
src/db/: activities.rs  boards.rs  columns.rs  labels.rs  mod.rs  tasks.rs  tests.rs
src/domain/: mod.rs
src/ui/: board.rs  detail.rs  help.rs  mod.rs  modals.rs  theme.rs
